--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
         <li>
             <h3><i class="material-icons md-18">emoji_events</i> Campeonatos</h3>
             <ul class="items-menu">
-                <li><a href="http://localhost:4200/">Constructores</a></li>
+                <li><a href="campeonatoConstructores">Constructores</a></li>
                 <li><a href="campeonatoConductores">Conductores</a></li>
             </ul>
         </li>
