--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,7 @@
 <div id="accordian">
     <ul>
-        <div class="botonch2">
-            <img src="images/menu/facebook.png" width="25px">Login<br> <!-- agregar imagen login y etc -->
-        </div>
-        <br>
         <li>
-            <h4><a href="http://localhost:4200/"><i class="material-icons md-18">home</i>Inicio</a></h4>
+            <h4><a href="home"><i class="material-icons md-18">home</i>Inicio</a></h4>
         </li>
         <br>
         <li>
