--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,3 +1,5 @@
 <div id="banner">
-    <img src="./assets/chicanaMainLogo.png.jpg" alt="null">
+    <a href="home">
+        <img src="./assets/chicanaMainLogo.png.jpg" alt="null">
+    </a>
 </div>
