--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,54 +22,51 @@
         </li>
         <li>
             <h3><i class="material-icons md-18">public</i> Equipos</h3>
-            <ul class="items-menu">
-                <li><a href="alpine"><img src="images/paises/in.png">Alpine</a></li>
-                <li><a href="astom-martin"><img src="images/paises/es.png">Aston Martin</a></li>
-                <li><a href="ferrari"><img src="images/paises/it.png">Ferrari</a></li>
-                <li><a href="haas"><img src="images/paises/de.png">Haas</a></li>
-                <li><a href="mclaren"><img src="images/paises/fr.png">McLaren</a></li>
-                <li><a href="Mercedes"><img src="images/paises/ho.png">Mercedes</a></li>
-                <li><a href="redbull"><img src="images/paises/br.png">Red Bull</a></li>
-                <li><a href="sauber"><img src="images/paises/uy.png">Sauber</a></li>
-                <li><a href="williams"><img src="images/paises/py.png">Williams</a></li>
+            <ul class="items-menu items-menu-equipos">
+                <li><a href="https://www.alpine-cars.co.uk/formula-1/f1-team.html" target="_blank"><img src="assets/equipos/alpine.png">Alpine</a></li>
+                <li><a href="https://www.astonmartinf1.com/en-GB/" target="_blank"><img src="assets/equipos/aston-martin.png">Aston Martin</a></li>
+                <li><a href="https://www.ferrari.com/en-EN/formula1/team" target="_blank"><img src="assets/equipos/ferrari.png">Ferrari</a></li>
+                <li><a href="https://www.haasf1team.com/" target="_blank"><img src="assets/equipos/haas.png">Haas</a></li>
+                <li><a href="https://www.mclaren.com/racing/" target="_blank"><img src="assets/equipos/mclaren.png">McLaren</a></li>
+                <li><a href="https://www.mercedesamgf1.com/" target="_blank"><img src="assets/equipos/mercedes.png">Mercedes</a></li>
+                <li><a href="https://www.redbullracing.com/int-en/int-es" target="_blank"><img src="assets/equipos/redbull.png">Red Bull</a></li>
+                <li><a href="https://www.sauber-group.com/" target="_blank"><img src="assets/equipos/sauber.png">Sauber</a></li>
+                <li><a href="https://www.williamsf1.com/" target="_blank"><img src="assets/equipos/williams.png">Williams</a></li>
             </ul>
         </li>
         <li>
             <h3><i class="material-icons md-18">flag</i> Gran Premios</h3>
-            <ul class="items-menu">
-                <li><a href="australia">Australia GP</a></li>
-                <li><a href="austria">Austria GP</a></li>
-                <li><a href="azb">Azerbaijan GP</a></li>
-                <li><a href="bahrain">Bahrain GP</a></li>
-                <li><a href="belgica">Bélgica GP</a></li>
-                <li><a href="saopablo">São Paulo GP</a></li>
-                <li><a href="canada">J. Canada GP</a></li>
-                <li><a href="china">China GP</a></li>
-                <li><a href="italia">Italia GP</a></li>
-                <li><a href="emilia-romagna">Emilia Romagna GP</a></li>
-                <li><a href="japon">Japón GP</a></li>
-                <li><a href="hungria">Hungría GP</a></li>
-                <li><a href="mexico">Mexico GP</a></li>
-                <li><a href="monaco">Mónaco GP</a></li>
-                <li><a href="p-bajos">Países Bajos GP</a></li>
-                <li><a href="qatar">Qatar GP</a></li>
-                <li><a href="arabia">Arabia Saudita GP</a></li>
-                <li><a href="singapur">Singapur GP</a></li>
-                <li><a href="espania">España GP</a></li>
-                <li><a href="abu-dhabi">Abu Dhabi GP</a></li>
-                <li><a href="reino-unido">Reino Unido GP</a></li>
-                <li><a href="usa">USA GP</a></li>
-                <li><a href="miami">Miami GP</a></li>
-                <li><a href="vegas">Las Vegas GP</a></li>  
+            <ul class="items-menu items-menu-equipos items-menu-paises">
+                <li><a href="australia"><img src="assets/paises/australia.png">Australia GP</a></li>
+                <li><a href="austria"><img src="assets/paises/austria.png">Austria GP</a></li>
+                <li><a href="azb"><img src="assets/paises/azb.png">Azerbaijan GP</a></li>
+                <li><a href="bahrain"><img src="assets/paises/bahrain.png">Bahrain GP</a></li>
+                <li><a href="belgica"><img src="assets/paises/belgica.png">Bélgica GP</a></li>
+                <li><a href="saopablo"><img src="assets/paises/saopablo.png">São Paulo GP</a></li>
+                <li><a href="canada"><img src="assets/paises/canada.png">J. Canada GP</a></li>
+                <li><a href="china"><img src="assets/paises/china.png">China GP</a></li>
+                <li><a href="italia"><img src="assets/paises/italia.png">Italia GP</a></li>
+                <li><a href="emilia-romagna"><img src="assets/paises/emlia-romagna.png">Emilia Romagna GP</a></li>
+                <li><a href="japon"><img src="assets/paises/japon.png">Japón GP</a></li>
+                <li><a href="hungria"><img src="assets/paises/hungria.png">ungría GP</a></li>
+                <li><a href="mexico"><img src="assets/paises/mexico.png">Mexico GP</a></li>
+                <li><a href="monaco"><img src="assets/paises/monaco.png">Mónaco GP</a></li>
+                <li><a href="p-bajos"><img src="assets/paises/p-bajos.png">Países Bajos GP</a></li>
+                <li><a href="qatar"><img src="assets/paises/qatar.png">Qatar GP</a></li>
+                <li><a href="arabia"><img src="assets/paises/arabia.png">Arabia Saudita GP</a></li>
+                <li><a href="singapur"><img src="assets/paises/singapur.png">Singapur GP</a></li>
+                <li><a href="espania"><img src="assets/paises/espania.png">España GP</a></li>
+                <li><a href="abu-dhabi"><img src="assets/paises/abu-dhabi.png">Abu Dhabi GP</a></li>
+                <li><a href="reino-unido"><img src="assets/paises/reino-unido.png">Reino Unido GP</a></li>
+                <li><a href="usa"><img src="assets/paises/usa.png">USA GP</a></li>
+                <li><a href="miami"><img src="assets/paises/miami.png">Miami GP</a></li>
+                <li><a href="vegas"><img src="assets/paises/vegas.png">Las Vegas GP</a></li>  
             </ul>
         </li>
         <br>
-        <h4><a href="comunidad"><i class="material-icons md-18">people</i> Comunidad</a></h4>
+        <h4><a href="comunidad"><i class="material-icons md-18">people</i>Comunidad</a></h4>
         <li>
-            <h4><a href="prode"><i class="material-icons md-18">casino</i> Prodemios</a></h4>
-        </li>
-        <li>
-            <h4><a href="calendario"><i class="material-icons md-18">calendar_today</i> Calendario</a></h4>
+            <h4><a href="calendario"><i class="material-icons md-18">calendar_today</i> Calendario </a></h4>
         </li>
         <br>
     </ul>
